HomePage sayfası yapıldı. LoginViewModel den yönlendirme yaptım direkt olarak anasayfaya

--- a/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
@@ -31,6 +31,7 @@
     </FlyoutItem>
 
     <TabBar Route="Main">
+        <ShellContent Title="DENEME" Route="HomePage" Icon="Home.png" ContentTemplate="{DataTemplate views:HomePage}"/>
         <ShellContent Title="CATALOG" Route="Catalog" Icon="{StaticResource CatalogIconImageSource}" ContentTemplate="{DataTemplate views:CatalogView}" />
         <ShellContent Title="PROFILE" Route="Profile" Icon="{StaticResource ProfileIconImageSource}" ContentTemplate="{DataTemplate views:ProfileView}" />
     </TabBar>
