--- a/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
@@ -33,6 +33,7 @@
     <TabBar Route="Main">
         <ShellContent Title="DENEME" Route="HomePage" Icon="Home.png" ContentTemplate="{DataTemplate views:HomePage}"/>
         <ShellContent Title="CATALOG" Route="Catalog" Icon="{StaticResource CatalogIconImageSource}" ContentTemplate="{DataTemplate views:CatalogView}" />
+        <ShellContent Title="FAVORİLER" Route="Favorites" Icon="Favorites.png" ContentTemplate="{DataTemplate views:Favorites}"/>
         <ShellContent Title="PROFILE" Route="Profile" Icon="{StaticResource ProfileIconImageSource}" ContentTemplate="{DataTemplate views:ProfileView}" />
     </TabBar>
 </Shell>
