Revert "duzenleme yapıldı bir kaç kateogri daha eklendi"
This reverts commit d50daaee3bd1e95e5075007f55b4f3c89c2f450f.

--- a/eShopOnContainers/eShopOnContainers.Core/Views/Categories.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/Views/Categories.xaml
@@ -8,7 +8,7 @@
                 <Label Text="" />
 
                 <ImageButton Source="tumsporlar.png"
-                             
+                             Clicked="ImageButton_Clicked"
                              
                     ></ImageButton>
                 <ImageButton Source="erkek.png"
