--- a/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
@@ -27,7 +27,7 @@
     </Shell.BackButtonBehavior>
 
     <FlyoutItem >
-        <ShellContent ContentTemplate="{DataTemplate views:Account}" Route="Login" />
+        <ShellContent ContentTemplate="{DataTemplate views:LoginView}" Route="Login" />
     </FlyoutItem>
 
     <TabBar Route="Main">
