--- a/eShopOnContainers/eShopOnContainers.Core/Views/AddProducts.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/Views/AddProducts.xaml
@@ -10,27 +10,27 @@
                 <RowDefinition Height="6*"/>
             </Grid.RowDefinitions>
             <StackLayout Orientation="Vertical" Grid.Row="0" Padding="5" Spacing="5">
-                <Entry x:Name="txtProductName" Placeholder="Enter Product Name" Text="{Binding product.productName}"
+                <Entry x:Name="txtProductName" Placeholder="Urun Ismi Girin" Text="{Binding product.productName}"
             HorizontalOptions="FillAndExpand"/>
-                <Entry x:Name="txtPrice" Placeholder="Enter Product Price" Text="{Binding product.productPrice}"
+                <Entry x:Name="txtPrice" Placeholder="Urun Fiyatı Girin" Text="{Binding product.productPrice}"
             HorizontalOptions="FillAndExpand" Keyboard="Numeric"/>
 
-                <Button x:Name="btnSave" Text="{Binding btnSaveText}"
+                <Button x:Name="btnSave" Text="KAYDET" BackgroundColor="#4682B4"
             Command="{Binding btnSaveProduct}" IsVisible="{Binding showButton}"/>
 
                 <ActivityIndicator x:Name="activityIndicator1" IsVisible="{Binding isBusy}"
             IsRunning="{Binding isBusy}"/>
 
-                <Label FontSize="Micro" x:Name="lblMessage" Text="{Binding lblMessage}" HorizontalOptions="FillAndExpand"/>
+                <Label FontSize="Small" x:Name="lblMessage" Text="Urun Kaydedildi." HorizontalOptions="FillAndExpand"/>
             </StackLayout>
 
             <StackLayout Orientation="Vertical" Grid.Row="1" VerticalOptions="FillAndExpand">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start" Padding="5"
-            BackgroundColor="#c9c9c9">
+            BackgroundColor="#4682B4">
 
-                    <Label Text="Name" WidthRequest="300" TextColor="#000" FontAttributes="Bold"
+                    <Label Text="Ad" WidthRequest="300" TextColor="#000" FontAttributes="Bold"
             VerticalOptions="Start"/>
-                    <Label Text="Price" WidthRequest="100" TextColor="#fc0339" FontAttributes="Bold"
+                    <Label Text="Fiyat" WidthRequest="100" TextColor="#fc0339" FontAttributes="Bold"
             VerticalOptions="Start"/>
                 </StackLayout>
 
