--- a/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/AppShell.xaml
@@ -31,10 +31,10 @@
     </FlyoutItem>
 
     <TabBar Route="Main">
-        <ShellContent Title="DENEME" Route="HomePage" Icon="Home.png" ContentTemplate="{DataTemplate views:HomePage}"/>
-        <ShellContent Title="CATALOG" Route="Catalog" Icon="{StaticResource CatalogIconImageSource}" ContentTemplate="{DataTemplate views:CatalogView}" />
+        <ShellContent Title="ANASAYFA" Route="HomePage" Icon="Home.png" ContentTemplate="{DataTemplate views:HomePage}"/>
+        <ShellContent Title="KATEGORILER" Route="Catalog" Icon="{StaticResource CatalogIconImageSource}" ContentTemplate="{DataTemplate views:CatalogView}" />
         <ShellContent Title="FAVORİLER" Route="Favorites" Icon="Favorites.png" ContentTemplate="{DataTemplate views:Favorites}"/>
-        <ShellContent Title="PROFILE" Route="Profile" Icon="{StaticResource ProfileIconImageSource}" ContentTemplate="{DataTemplate views:ProfileView}" />
-        <ShellContent Title="URUNEKLE" Route="Profile" Icon="{StaticResource ProfileIconImageSource}" ContentTemplate="{DataTemplate views:AddProducts}" />
+        <ShellContent Title="PROFIL" Route="Profile" Icon="{StaticResource ProfileIconImageSource}" ContentTemplate="{DataTemplate views:ProfileView}" />
+        <ShellContent Title="URUNEKLE" Route="AddProducts" Icon="{StaticResource CatalogIconImageSource}" ContentTemplate="{DataTemplate views:AddProducts}" />
     </TabBar>
 </Shell>
