--- a/eShopOnContainers/eShopOnContainers.Core/Views/Favorites.xaml
+++ b/eShopOnContainers/eShopOnContainers.Core/Views/Favorites.xaml
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="eShopOnContainers.Core.Views.Favorites">
+             xmlns:viewmodels="clr-namespace:eShopOnContainers.Core.ViewModels"
+             xmlns:xtc="http://xamarin.com/schemas/2020/toolkit"
+             x:Class="eShopOnContainers.Core.Views.Favorites"
+             x:DataType="viewmodels:FavoritiesViewModel"
+             Title="FAVORILER">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
                 <Label Margin="10,10" FontSize="22" FontAttributes="Bold" TextColor="Black">Favori Listem</Label>
                 <Label Margin="20,0" FontSize="15" FontAttributes="Bold" TextColor="Black">FAVORİ ÜRÜNÜNÜZ BULUNMAMAKTADIR.</Label>
-                <Button Margin="0,10" BackgroundColor="Black" Text="ALIŞVERİŞE BAŞLA" FontAttributes="Bold" TextTransform="None" FontSize="18" CornerRadius="5" HorizontalOptions="Center" WidthRequest="370"></Button>
+                <Button x:Name="myButton" Margin="0,10" BackgroundColor="#4682B4" Text="ALIŞVERİŞE BAŞLA" FontAttributes="Bold" TextTransform="None" FontSize="18" CornerRadius="5" HorizontalOptions="Center" WidthRequest="370"
+                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:FavoritiesViewModel}},Path=ButtonClicked}" CommandParameter="{x:Reference myButton}"></Button>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
